[scala] Migrate to jdk21